<resources>
    <string name="app_name">DocApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="my_doctors">My doctors</string>
    <string name="logout">Logout</string>
    <string name="log_in">log in</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="sign_up_as_patient">sign up as patient</string>
    <string name="sign_up_as_doctor">sign up as doctor</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone_no">Enter phone no</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_gender">Enter gender</string>
    <string name="enter_speciality">Enter speciality</string>
    <string name="enter_qualification">Enter qualification</string>
    <string name="title_activity_doctor">Pending Patients</string>
    <string name="send">Send</string>
    <string name="enter_query">Enter query...</string>
    <string name="sending">Sending...</string>
    <string name="my_patients">My Patients</string>
    <string name="type_your_reply_here">type your reply here</string>
    <string name="logging_you_in">Logging you in..</string>
    <string name="signing_up">Signing up...</string>
    <string name="loading">Loading...</string>
    <string name="type_here">type here...</string>
    <string name="query">Query</string>
    <string name="select_d_o_b">Select D.O.B</string>
    <string name="want_to_add_an_image">Want to add an image?</string>

    <string-array name="gender_spinner">
        <item>Select gender</item>
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
</resources>
