<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"
    >

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminate="false"
            android:max="100"
            android:progress="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.ProgressBar"
            android:indeterminateTint="@color/colorPrimary"

            />
        <TextView
            android:id="@+id/progress_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/logging_you_in"/>
    </LinearLayout>



    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.60"
      />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97"
        />




        <EditText
            android:id="@+id/edt_txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:autofillHints="@string/enter_email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_margin="4dp"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            app:layout_constraintBottom_toTopOf="@id/edt_txt_login_password"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



        <EditText
            android:id="@+id/edt_txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/edt_txt_login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="4dp"
            android:layout_marginTop="18dp"
            android:padding="4dp"
            />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/edt_txt_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2"/>

    <TextView
        android:id="@+id/sign_up_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_as_patient"
        android:layout_margin="4dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_doctor"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        />

    <TextView
        android:id="@+id/sign_up_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_as_doctor"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/sign_up_patient"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
