<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iitism.docapp.ReplyActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">



        <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/reply_image_view_zoom"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/background_rectangle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:padding="4dp"
            android:scaleType="fitCenter"/>


<!--        <ImageView-->
<!--            android:id="@+id/reply_image_view"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="200dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="40dp"/>-->

        <TextView
            android:id="@+id/txt_view_reply_query"
            android:text="@string/query"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_reply_here"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_text_reply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_add_an_image"
            android:layout_gravity="center_horizontal"
            android:buttonTint="@color/colorPrimary"
             />

        <RelativeLayout
            android:id="@+id/reply_image_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

            <com.zolad.zoominimageview.ZoomInImageView
            android:id="@+id/doc_reply_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:background="@drawable/background_rectangle"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:padding="4dp"/>

        <ImageButton
            android:id="@+id/btn_select_reply_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_toRightOf="@id/doc_reply_image_view"
            android:background="@drawable/background_circle"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:padding="4dp"/>

        </RelativeLayout>



        <Button
            android:id="@+id/btn_reply"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>