<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuerySendingActivity">

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="false"
            android:max="100"
            android:progress="10"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/progress_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/sending"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/txt_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add image here.."
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_select_query_image"
            android:elevation="0.01dp"/>


    <ImageView
        android:id="@+id/query_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:background="@drawable/background_rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="4dp"/>

    <ImageButton
        android:id="@+id/btn_select_query_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        android:background="@drawable/background_circle"
        android:layout_toEndOf="@id/query_image_view"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="4dp"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/text_input_layout"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:layout_marginTop="50dp"
       android:layout_marginRight="4dp"
       android:layout_marginLeft="4dp"
       android:layout_marginBottom="20dp"
       android:padding="4dp"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:hint="@string/enter_query"
       android:layout_below="@id/query_image_view">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/edt_txt_query"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="start"/>

   </com.google.android.material.textfield.TextInputLayout>





    <Button
        android:id="@+id/btn_send_query"
        android:text="@string/send"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_input_layout"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:padding="8dp"/>

    </RelativeLayout>

</RelativeLayout>